#4 - implementation
Implementation of simple beans instantiation.